--- a/Api.MasterChefe/Api.MasterChefe.Web.csproj
+++ b/Api.MasterChefe/Api.MasterChefe.Web.csproj
@@ -7,11 +7,17 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
+    <ProjectReference Include="..\Api.MasterChefe.Ioc\Api.MasterChefe.Ioc.csproj" />
+    <ProjectReference Include="..\Api.MasterChefe.Repository\Api.MasterChefe.Repository.csproj" />
+    <ProjectReference Include="..\ClassLibrary1\Api.MasterChefe.Aplications.csproj" />
   </ItemGroup>
 
 </Project>
