--- a/Api.MasterChefe/appsettings.json
+++ b/Api.MasterChefe/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "conexao": "Data Source=DESKTOP-6TRGIMN;Database=MasterChefe;Integrated Security=True;MultipleActiveResultSets=True;TrustServerCertificate=True"
+  }
 }
