--- a/UI.MasterChefe.Web/appsettings.json
+++ b/UI.MasterChefe.Web/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "apiUrl": "https://localhost:7043/api/",
+  "pathImagem": "wwwroot/Img/"
+
 }
