--- a/UI.MasterChefe.Web/appsettings.json
+++ b/UI.MasterChefe.Web/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "AllowedHosts": "*",
-  "apiUrl": "https://localhost:7043/api/",
+  "apiUrl": "https://localhost:7043/api",
   "pathImagem": "wwwroot/Img/"
 
 }
